--- a/products.html
+++ b/products.html
@@ -26,6 +26,25 @@
             <li><a href="contact us.html">Contact</a></li>
         </ul>
     </nav>
+    <div class="grid-container">
+        <div class="grid-item">
+            <img src="japan 2.jpg" alt="">
+            <p>Explore the vibrant city of Tokyo, Japan with our exclusive destination package. Immerse yourself in the culture, taste exquisite cuisine, and create lasting memories.</p>
+            <p class="price">$2000</p> 
+        </div>
+        <div class="grid-item">
+            <img src="bali 2.jpg" alt="">
+            <p>Experience the paradise of Bali, Indonesia with our premium destination package. Relax on stunning beaches, discover ancient temples, and enjoy the natural beauty of the island.</p>
+            <p class="price">$1500</p> 
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2023 Saraf Destinations. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
 
    
 
