--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
             <li><a href="contact us.html">Contact</a></li>
         </ul>
     </nav>
+<h2>About Us</h2>
+Welcome to Saraf Destinations! We are passionate about providing exceptional travel experiences that create lasting memories for our customers.</p>
 
+        <p>At Saraf Destinations, we believe that travel is more than just visiting new places; it's about discovering the unique cultures, cuisines, and landscapes that make each destination special. Our team is dedicated to curating extraordinary travel packages that cater to diverse interests and preferences.</p>
+
+       
+        <p>Thank you for considering us for your next journey. We look forward to being a part of your travel adventures and creating experiences that will stay with you for a lifetime.</p>
     <div class="flex-container">
         <div class="destination">
             <img src="bali beach 1.jpg" alt="">
